Update and rename video.css to main.css

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 /**
-  video.css
+  main.css
 */
 
 :root{
@@ -177,3 +177,4 @@
   outline: 3px solid rgba(33,150,243,0.18);
   outline-offset: 2px;
 }
+
